--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ bind r source-file ~/.tmux.conf
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, weather, time
 set -g @dracula-plugins "git weather cpu-usage ram-usage"
 set -g @dracula-show-powerline true
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+# source "/usr/share/powerline/bindings/tmux/powerline.conf"
 set -g @dracula-show-flags true
 # git
 # default is ✓. Avoid using non unicode characters that bash uses like $, * and ! 
