--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
+set -g status-right "#(/bin/bash $HOME/.tmux/kube-tmux/kube.tmux 250 red cyan)"
 
 # Run Tmux Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
