--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ bind r source-file ~/.tmux.conf
 
 ### dracula theme ###
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, weather, time
-set -g @dracula-plugins "git weather cpu-usage ram-usage"
+set -g @dracula-plugins "git"
 set -g @dracula-show-powerline true
 # source "/usr/share/powerline/bindings/tmux/powerline.conf"
 set -g @dracula-show-flags true
@@ -49,7 +49,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
-set -g status-right "#(/bin/bash $HOME/.tmux/kube-tmux/kube.tmux 250 red cyan)"
+#set -g status-right "#(/bin/bash $HOME/.tmux/kube-tmux/kube.tmux 250 red cyan)"
 
 # Run Tmux Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
