--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,10 @@ set -g @dracula-git-show-diff-symbol !
 # weather
 set -g @dracula-show-fahrenheit false
 
+
+# copy to clipboard on selection
+set -g @yank_selection_mouse 'clipboard'.
+
 ###########################
 # Plugins
 ###########################
@@ -49,6 +53,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
 #set -g status-right "#(/bin/bash $HOME/.tmux/kube-tmux/kube.tmux 250 red cyan)"
 
 # Run Tmux Plugin Manager
